add language switch link on mobile view

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h1>DEFOQA</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#mission">Mission</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="desktop-only"><a href="#about">About</a></li>
+                <li class="desktop-only"><a href="#products">Products</a></li>
+                <li class="desktop-only"><a href="#mission">Mission</a></li>
+                <li class="desktop-only"><a href="#contact">Contact</a></li>
                 <li><a href="jp.html">日本語</a></li>
             </ul>
         </nav>
