--- a/jp.html
+++ b/jp.html
@@ -22,10 +22,10 @@
                 <h1>DEFOQA</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#about">ブランド紹介</a></li>
-                <li><a href="#products">製品</a></li>
-                <li><a href="#mission">ミッション</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
+                <li class="desktop-only"><a href="#about">ブランド紹介</a></li>
+                <li class="desktop-only"><a href="#products">製品</a></li>
+                <li class="desktop-only"><a href="#mission">ミッション</a></li>
+                <li class="desktop-only"><a href="#contact">お問い合わせ</a></li>
                 <li><a href="index.html">English</a></li>
             </ul>
         </nav>
@@ -77,7 +77,7 @@
                     <div class="product-info">
                         <h3>DEFOQA Birth</h3>
                         <p>私たちのデビュー作となるサッカーボール。最高品質の素材と完璧なバランスで設計されています。情熱のために立ち上がるプレイヤーのために。</p>
-                        <a href="#" class="btn">詳細を見る</a>
+                        <!-- <a href="#" class="btn">詳細を見る</a> -->
                     </div>
                 </div>
             </div>
@@ -165,8 +165,8 @@
                 <div class="footer-links">
                     <h3>お問い合わせ</h3>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> info@defoqa.com</li>
-                        <li><i class="fas fa-phone"></i> +61 2 1234 5678</li>
+                        <li><i class="fas fa-envelope"></i> xxxx@defoqa.com</li>
+                        <li><i class="fas fa-phone"></i> +61 2 xxxx xxxx</li>
                         <li><i class="fas fa-map-marker-alt"></i> シドニー、オーストラリア</li>
                     </ul>
                 </div>
