fix images and contents

--- a/jp.html
+++ b/jp.html
@@ -61,7 +61,7 @@
                     <p>私たちは、自分の信じるもののために立ち上がり、行動することでそれぞれの道を切り開く力があると信じています。「DEFOQA」というブランド名は、信念を持って挑戦し続ける皆さんを鼓舞し、支援する私たちの約束です。このブランドを通じて、挑戦を続ける皆さんを応援し、共に挑戦していきます。</p>
                 </div>
                 <div class="about-image">
-                    <img src="o4ej94dmbw_1.png" alt="DEFOQAサッカーボール">
+                    <img src="sttq5vdgn9.jpg" alt="DEFOQA Soccer Ball on Field">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <div class="product-info">
                         <h3>DEFOQA Birth</h3>
                         <p>私たちのデビュー作となるサッカーボール。最高品質の素材と完璧なバランスで設計されています。情熱のために立ち上がるプレイヤーのために。</p>
-                        <a href="#" class="btn">詳細を見る</a>
+                        <!-- <a href="#" class="btn">詳細を見る</a> -->
                     </div>
                 </div>
             </div>
@@ -102,32 +102,31 @@
                 <div class="ambassador-grid">
                     <div class="ambassador-card">
                         <div class="ambassador-image">
-                            <img src="j8v99jtykn.jpg" alt="サラ・ジョンソン - プロフェッショナルサッカー選手">
+                            <img src="j8v99jtykn.jpg" alt="DEFOQAブランドアンバサダー">
                         </div>
                         <div class="ambassador-info">
-                            <h3>サラ・ジョンソン</h3>
-                            <p class="ambassador-title">プロフェッショナルサッカー選手</p>
-                            <p>オーストラリア代表として活躍する女子サッカー選手。卓越した技術と強いリーダーシップで知られています。若い女の子たちにとって、DEFOQAとともに大きなインスピレーションを与えています。</p>
+                            <h3>プロアスリート</h3>
+                            <p>私たちのアンバサダーには、パース・グローリーで活躍した須永未来と、ヤングなでしこ出身の田中景子がいます。二人は現在もNSW NPLでプレーを続けており、オーストラリアと日本の女子サッカーのトップレベルを体現しています。</p>
                         </div>
                     </div>
+                    
                     <div class="ambassador-card">
                         <div class="ambassador-image">
-                            <img src="8ynuh9c0tu.jpg" alt="エミリー・チェン - ジュニアサッカーコーチ">
+                            <img src="8ynuh9c0tu.jpg" alt="DEFOQAとブランドアンバサダー">
                         </div>
                         <div class="ambassador-info">
-                            <h3>エミリー・チェン</h3>
-                            <p class="ambassador-title">ジュニアサッカーコーチ</p>
-                            <p>シドニーでの若い女の子たちのサッカー発展に貢献しているコーチ。彼女の指導哲学は、単なるスキルだけでなく、自信と信念を育てることに重点を置いています。</p>
+                            <h3>共通の価値観</h3>
+                            <p>勇気や信念、挑戦し続ける姿勢という私たちのコアバリューを体現し、すべてのレベルの選手が自分の夢に向かって挑戦することを後押ししています。</p>
                         </div>
                     </div>
+                    
                     <div class="ambassador-card">
                         <div class="ambassador-image">
-                            <img src="fzrukyb2i3.jpg" alt="リア・パーカー - 地域サッカークラブ創設者">
+                            <img src="dszp6ba76j.jpg" alt="DEFOQAでのトレーニング">
                         </div>
                         <div class="ambassador-info">
-                            <h3>リア・パーカー</h3>
-                            <p class="ambassador-title">地域サッカークラブ創設者</p>
-                            <p>恵まれない環境の子どもたちにサッカーの機会を提供するクラブを設立。DEFOQAのボールを使って、情熱、チームワーク、そして自分の信じるもののために立ち上がる重要性を教えています。</p>
+                            <h3>品質へのパートナーシップ</h3>
+                            <p>私たちは共に、情熱のために立ち上がり、自分自身に挑戦し続ける選手たちに最高品質のサッカーボールを届けることにコミットしています。</p>
                         </div>
                     </div>
                 </div>
@@ -256,14 +255,14 @@
                 <div class="footer-links">
                     <h3>お問い合わせ</h3>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> info@defoqa.com</li>
+                        <li><i class="fas fa-envelope"></i> info@defoqa.com.au</li>
                         <li><i class="fas fa-map-marker-alt"></i> シドニー、オーストラリア</li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>フォロー</h3>
                     <ul>
-                        <li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://www.instagram.com/defoqa2025?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
             </div>
