link update, text update

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <li><a href="#ambassadors">Ambassadors</a></li>
                 <li><a href="#mission">Mission</a></li>
                 <li><a href="#cta">Contact</a></li>
-                <li><a href="jp.html">日本語</a></li>
+                <li><a href="/jp">日本語</a></li>
             </ul>
             <div class="mobile-lang-switch">
-                <a href="jp.html" class="mobile-lang-link">日本語</a>
+                <a href="/jp" class="mobile-lang-link">日本語</a>
             </div>
         </nav>
     </header>
