--- a/jp.html
+++ b/jp.html
@@ -27,10 +27,10 @@
                 <li><a href="#ambassadors">アンバサダー</a></li>
                 <li><a href="#mission">ミッション</a></li>
                 <li><a href="#cta">お問い合わせ</a></li>
-                <li><a href="index.html">English</a></li>
+                <li><a href="/">English</a></li>
             </ul>
             <div class="mobile-lang-switch">
-                <a href="index.html" class="mobile-lang-link">EN</a>
+                <a href="/" class="mobile-lang-link">EN</a>
             </div>
         </nav>
     </header>
@@ -42,7 +42,7 @@
         <div class="hero-content">
             <h1>DEFOQA</h1>
             <h2>Defenda o que acredita</h2>
-            <p>自分が信じたもののために立ち上がる。信念を持って行動する人々のための高品質なサッカーボール。</p>
+            <p>自分が信じたもののために立ち上がれ。信念を持って行動する人々のために高品質なサッカーボールを。</p>
             <a href="#products" class="btn">ボールを見る</a>
         </div>
     </section>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="ambassador-info">
                             <h3>プロアスリート</h3>
-                            <p>私たちのアンバサダーには、パース・グローリーで活躍した須永未来と、ヤングなでしこ出身の田中景子がいます。二人は現在もNSW NPLでプレーを続けており、オーストラリアと日本の女子サッカーのトップレベルを体現しています。</p>
+                            <p>私たちのアンバサダーには、パース・グローリーで活躍した須永未来と、ヤングなでしこでもプレーした田中景子がいます。二人は現在もNSW NPLでプレーを続けており、オーストラリアと日本の女子サッカーのトップレベルを体現しています。</p>
                         </div>
                     </div>
                     
