--- a/index.html
+++ b/index.html
@@ -341,37 +341,70 @@
 
                                 // Ensure reCAPTCHA response is included
                                 formData.append('g-recaptcha-response', token);
-                                
-                                // Send the form data to SSGForm
-                                fetch('https://ssgform.com/s/EfAcQ9tmKgpk', {
-                                    method: 'POST',
-                                    mode: 'cors',
-                                    headers: {
-                                        'X-Requested-With': 'XMLHttpRequest',
-                                    },
-                                    body: formData,
-                                })
-                                .then(response => {
-                                    if (response.ok) {
-                                        // Reset the form
+
+                                // XMLHttpRequest (XHR) を使って送信する
+                                const xhr = new XMLHttpRequest();
+                                xhr.open('POST', 'https://ssgform.com/s/EfAcQ9tmKgpk', true);
+                                xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest'); // 必須ヘッダー
+
+                                // 送信完了時の処理
+                                xhr.addEventListener('load', function() {
+                                    if (xhr.status >= 200 && xhr.status < 300) {
+                                        // 成功
                                         contactForm.reset();
-                                        // Show success message
                                         alert('Thank you for your message! We will get back to you soon.');
-                                        // Hide contact section
                                         contactSection.style.display = 'none';
                                     } else {
-                                        throw new Error('Failed to submit the form');
+                                        // サーバーエラー
+                                        console.error('XHR Error:', xhr.status, xhr.statusText, xhr.responseText);
+                                        alert('Sorry, there was an error submitting your message. Please try again later.');
                                     }
-                                })
-                                .catch(error => {
-                                    console.error('Error:', error);
-                                    alert('Sorry, there was an error submitting your message. Please try again later.');
-                                })
-                                .finally(() => {
-                                    // Reset button state
+                                    // finally相当の処理
                                     submitButton.textContent = originalText;
                                     submitButton.disabled = false;
                                 });
+
+                                // 通信エラー時の処理
+                                xhr.addEventListener('error', function() {
+                                    console.error('Network Error with XHR');
+                                    alert('Sorry, there was a network error. Please check your connection and try again.');
+                                    // finally相当の処理
+                                    submitButton.textContent = originalText;
+                                    submitButton.disabled = false;
+                                });
+
+                                xhr.send(formData);
+                                
+                                // Send the form data to SSGForm
+                                // fetch('https://ssgform.com/s/EfAcQ9tmKgpk', {
+                                //     method: 'POST',
+                                //     mode: 'cors',
+                                //     headers: {
+                                //         'X-Requested-With': 'XMLHttpRequest',
+                                //     },
+                                //     body: formData,
+                                // })
+                                // .then(response => {
+                                //     if (response.ok) {
+                                //         // Reset the form
+                                //         contactForm.reset();
+                                //         // Show success message
+                                //         alert('Thank you for your message! We will get back to you soon.');
+                                //         // Hide contact section
+                                //         contactSection.style.display = 'none';
+                                //     } else {
+                                //         throw new Error('Failed to submit the form');
+                                //     }
+                                // })
+                                // .catch(error => {
+                                //     console.error('Error:', error);
+                                //     alert('Sorry, there was an error submitting your message. Please try again later.');
+                                // })
+                                // .finally(() => {
+                                //     // Reset button state
+                                //     submitButton.textContent = originalText;
+                                //     submitButton.disabled = false;
+                                // });
                             });
                         });
                     }
