temp close contact info

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#products">Products</a></li>
                 <li><a href="#ambassadors">Ambassadors</a></li>
                 <li><a href="#mission">Mission</a></li>
-                <li><a href="#cta">Contact</a></li>
+                <!-- <li><a href="#cta">Contact</a></li> -->
                 <li><a href="/jp">日本語</a></li>
             </ul>
             <div class="mobile-lang-switch">
@@ -186,7 +186,7 @@
         <div class="container">
             <h2>Take a Stand with DEFOQA</h2>
             <p>Join us in our mission to deliver quality soccer balls to players across Australia. Stand up for your passion.</p>
-            <a href="mailto:info@defoqa.com" class="btn">Contact Us</a>
+            <!-- <a href="mailto:info@defoqa.com" class="btn">Contact Us</a> -->
         </div>
     </section>
 
@@ -248,13 +248,13 @@
                         <li><a href="#mission">Our Mission</a></li>
                     </ul>
                 </div>
-                <div class="footer-links">
+                <!-- <div class="footer-links">
                     <h3>Contact Us</h3>
                     <ul>
                         <li><i class="fas fa-envelope"></i> info@defoqa.com.au</li>
                         <li><i class="fas fa-map-marker-alt"></i> Sydney, Australia</li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <h3>Follow</h3>
                     <ul>
