--- a/jp.html
+++ b/jp.html
@@ -27,7 +27,7 @@
                 <li><a href="#products">製品</a></li>
                 <li><a href="#ambassadors">アンバサダー</a></li>
                 <li><a href="#mission">ミッション</a></li>
-                <li><a href="#cta">お問い合わせ</a></li>
+                <!-- <li><a href="#cta">お問い合わせ</a></li> -->
                 <li><a href="/">English</a></li>
             </ul>
             <div class="mobile-lang-switch">
@@ -191,7 +191,7 @@
         <div class="container">
             <h2>DEFOQAと共に立ち上がる</h2>
             <p>オーストラリア全土のプレイヤーに品質の高いサッカーボールを届けるという私たちのミッションに参加しませんか。あなたの情熱のために立ち上がりましょう。</p>
-            <a href="mailto:info@defoqa.com" class="btn">お問い合わせ</a>
+            <!-- <a href="mailto:info@defoqa.com" class="btn">お問い合わせ</a> -->
         </div>
     </section>
 
@@ -253,13 +253,13 @@
                         <li><a href="#mission">ミッション</a></li>
                     </ul>
                 </div>
-                <div class="footer-links">
+                <!-- <div class="footer-links">
                     <h3>お問い合わせ</h3>
                     <ul>
                         <li><i class="fas fa-envelope"></i> info@defoqa.com.au</li>
                         <li><i class="fas fa-map-marker-alt"></i> シドニー、オーストラリア</li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <h3>フォロー</h3>
                     <ul>
