--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#products">Products</a></li>
                 <li><a href="#ambassadors">Ambassadors</a></li>
                 <li><a href="#mission">Mission</a></li>
-                <!-- <li><a href="#cta">Contact</a></li> -->
+                <li><a href="#cta">Contact</a></li>
                 <li><a href="/jp">日本語</a></li>
             </ul>
             <div class="mobile-lang-switch">
@@ -186,7 +186,7 @@
         <div class="container">
             <h2>Take a Stand with DEFOQA</h2>
             <p>Join us in our mission to deliver quality soccer balls to players across Australia. Stand up for your passion.</p>
-            <!-- <a href="mailto:info@defoqa.com" class="btn">Contact Us</a> -->
+            <a href="#" class="btn">Contact Us</a>
         </div>
     </section>
 
@@ -333,83 +333,51 @@
                         submitButton.textContent = 'Sending...';
                         submitButton.disabled = true;
 
-                        // reCAPTCHAを実行してトークンを取得
+                        // Execute reCAPTCHA and submit to Lambda API
                         grecaptcha.ready(function() {
                             grecaptcha.execute('6Lf8OnYrAAAAAFCdEMR-q8479evh5r4Lkv-TS_92', {action: 'submit'}).then(function(token) {
-
-                                // const formData = new FormData(contactForm);
-                                const formData = new FormData();
-
-                                // Ensure reCAPTCHA response is included
-                                formData.append('g-recaptcha-response', token);
-                                // Append form data
-                                formData.append('お名前', name.value.trim());
-                                formData.append('メールアドレス', email.value.trim());
-                                formData.append('お問い合わせ内容', message.value.trim());
-
-                                // XMLHttpRequest (XHR) を使って送信する
-                                const xhr = new XMLHttpRequest();
-                                xhr.open('POST', 'https://ssgform.com/s/EfAcQ9tmKgpk', true);
-                                xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest'); // 必須ヘッダー
-
-                                // 送信完了時の処理
-                                xhr.addEventListener('load', function() {
-                                    if (xhr.status >= 200 && xhr.status < 300) {
-                                        // 成功
-                                        contactForm.reset();
-                                        alert('Thank you for your message! We will get back to you soon.');
-                                        contactSection.style.display = 'none';
-                                    } else {
-                                        // サーバーエラー
-                                        console.error('XHR Error:', xhr.status, xhr.statusText, xhr.responseText);
-                                        alert('Sorry, there was an error submitting your message. Please try again later.');
-                                    }
-                                    // finally相当の処理
-                                    submitButton.textContent = originalText;
-                                    submitButton.disabled = false;
-                                });
-
-                                // 通信エラー時の処理
-                                xhr.addEventListener('error', function() {
-                                    console.error('Network Error with XHR');
-                                    alert('Sorry, there was a network error. Please check your connection and try again.');
-                                    // finally相当の処理
-                                    submitButton.textContent = originalText;
-                                    submitButton.disabled = false;
-                                });
-
-                                xhr.send(formData);
                                 
-                                // Send the form data to SSGForm
-                                // fetch('https://ssgform.com/s/EfAcQ9tmKgpk', {
-                                //     method: 'POST',
-                                //     mode: 'cors',
-                                //     headers: {
-                                //         'X-Requested-With': 'XMLHttpRequest',
-                                //     },
-                                //     body: formData,
-                                // })
-                                // .then(response => {
-                                //     if (response.ok) {
-                                //         // Reset the form
-                                //         contactForm.reset();
-                                //         // Show success message
-                                //         alert('Thank you for your message! We will get back to you soon.');
-                                //         // Hide contact section
-                                //         contactSection.style.display = 'none';
-                                //     } else {
-                                //         throw new Error('Failed to submit the form');
-                                //     }
-                                // })
-                                // .catch(error => {
-                                //     console.error('Error:', error);
-                                //     alert('Sorry, there was an error submitting your message. Please try again later.');
-                                // })
-                                // .finally(() => {
-                                //     // Reset button state
-                                //     submitButton.textContent = originalText;
-                                //     submitButton.disabled = false;
-                                // });
+                                // Prepare form data for Lambda API
+                                const formData = {
+                                    name: name.value.trim(),
+                                    email: email.value.trim(),
+                                    message: message.value.trim(),
+                                    language: 'English',
+                                    recaptchaToken: token
+                                };
+
+                                // Submit to Lambda API Gateway using fetch
+                                fetch('https://q1pouxk32d.execute-api.ap-southeast-2.amazonaws.com/default/postDefoqaContactFormok', {
+                                    method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                                    body: JSON.stringify(formData)
+                                })
+                                .then(response => {
+                                    if (response.ok) {
+                                        return response.json();
+                                    } else {
+                                        return response.json().then(errorData => {
+                                            throw new Error(errorData.error || 'Failed to submit the form');
+                                        });
+                                    }
+                                })
+                                .then(data => {
+                                    // Success
+                                    contactForm.reset();
+                                    alert('Thank you for your message! We will get back to you soon.');
+                                    contactSection.style.display = 'none';
+                                })
+                                .catch(error => {
+                                    console.error('Error:', error);
+                                    alert('Sorry, there was an error submitting your message: ' + error.message);
+                                })
+                                .finally(() => {
+                                    // Reset button state
+                                    submitButton.textContent = originalText;
+                                    submitButton.disabled = false;
+                                });
                             });
                         });
                     }
