--- a/index.html
+++ b/index.html
@@ -352,14 +352,18 @@
                                 console.log('Current href:', window.location.href);
                                 console.log('Current hostname:', window.location.hostname);
                                 
+                                // Use FormData to avoid preflight
+                                const submitData = new FormData();
+                                submitData.append('name', formData.name);
+                                submitData.append('email', formData.email);
+                                submitData.append('message', formData.message);
+                                submitData.append('language', formData.language);
+                                submitData.append('recaptchaToken', formData.recaptchaToken);
+                                
                                 // Submit to Lambda API Gateway using fetch
                                 fetch('https://q1pouxk32d.execute-api.ap-southeast-2.amazonaws.com/default/postDefoqaContactFormok', {
                                     method: 'POST',
-                                    mode: 'cors',
-                                    headers: {
-                                        'Content-Type': 'application/json'
-                                    },
-                                    body: JSON.stringify(formData)
+                                    body: submitData  // No headers needed - browser sets them automatically
                                 })
                                 .then(response => {
                                     if (response.ok) {
